--- a/Makefile.osx
+++ b/Makefile.osx
@@ -3,22 +3,40 @@
 #
 
 
-CXX = g++-mp-4.8
+CXX = g++-mp-8
 #CXX = c++
 CXXOPTIONS = -O3 -DVTK -std=c++11
 #CXXOPTIONS = -DVTK -std=c++11
-CXXFLAGS = $(CXXOPTIONS) -I/opt/local/include/vtk-5.10 \
+CXXFLAGS = $(CXXOPTIONS) -I/usr/local/VTK/include/vtk-8.1 \
 -I/opt/local/include/eigen3 -I/opt/local/include -I./ttcr
 
-LFLAGS = -L/opt/local/lib/vtk-5.10
+LFLAGS = -L/usr/local/VTK/lib
 
-LIBS = -lvtkCommon -lvtkFiltering -lvtkIO
+LIBS = -lvtkIOXML-8.1 -lvtkCommonDataModel-8.1 -lvtkCommonCore-8.1 -lvtkIOXMLParser-8.1 -lvtkIOCore-8.1 -lvtkCommonExecutionModel-8.1 \
+-lvtkCommonSystem-8.1 -lvtkCommonTransforms-8.1 -lvtkCommonMisc-8.1 -lvtkCommonMath-8.1 -lvtksys-8.1 -lvtkexpat-8.1 -lvtklz4-8.1 \
+-lvtkzlib-8.1
 
-ttcr3d : ttcr/ttcr3d.cpp ttcr/ttcr_io.h ttcr/structs_ttcr.h ttcr/utils_ttcr.h ttcr/Rcv.h ttcr/Src.h ttcr_io.o
-	$(CXX) $(CXXFLAGS) $(LFLAGS) $(LIBS) -Ittcr ttcr_io.o ttcr/ttcr3d.cpp -o ttcr3d
+HEADERS = ttcr/Cell.h ttcr/Grad.h ttcr/Grid2D.h ttcr/Grid2Drcfs.h ttcr/Grid2Drc.h ttcr/Grid2Drcsp.h ttcr/Grid2Drnfs.h \
+ttcr/Grid2Drn.h ttcr/Grid2Drnsp.h ttcr/Grid2Ducfm.h ttcr/Grid2Ducfs.h ttcr/Grid2Duc.h ttcr/Grid2Ducsp.h \
+ttcr/Grid2Dunfm.h ttcr/Grid2Dunfs.h ttcr/Grid2Dun.h ttcr/Grid2Dunsp.h ttcr/Grid3D.h ttcr/Grid3Drc.h \
+ttcr/Grid3Drcsp.h ttcr/Grid3Drnfs.h ttcr/Grid3Drn.h ttcr/Grid3Drnsp.h ttcr/Grid3Ducfm.h \
+ttcr/Grid3Ducfs.h ttcr/Grid3Duc.h ttcr/Grid3Ducsp.h ttcr/Grid3Dunfm.h ttcr/Grid3Dunfs.h ttcr/Grid3Dun.h \
+ttcr/Grid3Dunsp.h ttcr/Interface.h ttcr/Interpolator.h ttcr/Metric.h ttcr/msh2vtk_io.h ttcr/MSHReader.h \
+ttcr/Node2Dc.h ttcr/Node2Dcsp.h ttcr/Node2Dn.h ttcr/Node2Dnsp.h ttcr/Node3Dc.h ttcr/Node3Dcsp.h ttcr/Node3Dn.h \
+ttcr/Node3Dnsp.h ttcr/Node.h ttcr/Rcv2D.h ttcr/Rcv.h ttcr/Src2D.h ttcr/Src.h ttcr/structs_msh2vtk.h \
+ttcr/structs_ttcr.h ttcr/ttcr_io.h ttcr/ttcr_t.h ttcr/utils.h ttcr/VTUReader.h
+
+ttcr3d : ttcr3d.o ttcr_io.o
+	$(CXX) $(CXXFLAGS) $(LFLAGS) $(LIBS) ttcr_io.o ttcr3d.o -o ttcr3d
+
+ttcr3d.o : ttcr/ttcr3d.cpp $(HEADERS)
+	$(CXX) $(CXXFLAGS) -c ttcr/ttcr3d.cpp
 
 ttcr_io.o : ttcr/ttcr_io.h ttcr/ttcr_io.cpp ttcr/structs_ttcr.h
 	$(CXX) $(CXXFLAGS) -c ttcr/ttcr_io.cpp
 
-ttcr2d : ttcr/ttcr2d.cpp ttcr/ttcr_io.h ttcr/structs_ttcr.h ttcr/utils_ttcr.h ttcr/Rcv2D.h ttcr/Src2D.h ttcr_io.o
-	$(CXX) $(CXXFLAGS) $(LFLAGS) $(LIBS) ttcr_io.o ttcr/ttcr2d.cpp -o ttcr2d
+ttcr2d : ttcr2d.o ttcr_io.o
+	$(CXX) $(CXXFLAGS) $(LFLAGS) $(LIBS) ttcr_io.o ttcr2d.o -o ttcr2d
+
+ttcr2d.o : ttcr/ttcr2d.cpp $(HEADERS)
+	$(CXX) $(CXXFLAGS) -c ttcr/ttcr2d.cpp
