--- a/Makefile.centos
+++ b/Makefile.centos
@@ -5,6 +5,7 @@
 
 CXX = g++
 CXXOPTIONS = -O3 -DVTK -std=c++11
+#CXXOPTIONS = -g -DVTK -std=c++11
 CXXFLAGS = $(CXXOPTIONS) -I/usr/local/VTK-8.1.1/include/vtk-8.1 \
 -I/usr/include/eigen3 -I./ttcr
 
