compile with VTK-8.2 under linux

--- a/Makefile.centos
+++ b/Makefile.centos
@@ -4,16 +4,16 @@
 
 
 CXX = g++
-CXXOPTIONS = -O3 -DVTK -std=c++11
+CXXOPTIONS = -O3 -DVTK -std=c++11 -pthread
 #CXXOPTIONS = -g -DVTK -std=c++11
-CXXFLAGS = $(CXXOPTIONS) -I/usr/local/VTK-8.1.1/include/vtk-8.1 \
+CXXFLAGS = $(CXXOPTIONS) -I/usr/local/VTK-8.2.0/include/vtk-8.2 \
 -I/usr/include/eigen3 -I./ttcr
 
-LFLAGS = -L/usr/local/VTK-8.1.1/lib/
+LFLAGS = -L/usr/local/VTK-8.2.0/lib64/
 
-LIBS = -lvtkIOXML-8.1 -lvtkCommonDataModel-8.1 -lvtkCommonCore-8.1 -lvtkIOXMLParser-8.1 -lvtkIOCore-8.1 -lvtkCommonExecutionModel-8.1 \
--lvtkCommonSystem-8.1 -lvtkCommonTransforms-8.1 -lvtkCommonMisc-8.1 -lvtkCommonMath-8.1 -lvtksys-8.1 -lvtkexpat-8.1 -lvtklz4-8.1 \
--lvtkzlib-8.1
+LIBS = -lvtkIOXML-8.2 -lvtkCommonDataModel-8.2 -lvtkCommonCore-8.2 -lvtkIOXMLParser-8.2 -lvtkIOCore-8.2 -lvtkCommonExecutionModel-8.2 \
+-lvtkCommonSystem-8.2 -lvtkCommonTransforms-8.2 -lvtkCommonMisc-8.2 -lvtkCommonMath-8.2 -lvtksys-8.2 -lvtkexpat-8.2 -lvtklz4-8.2 \
+-lvtklzma-8.2 -lvtkzlib-8.2 -lvtkdoubleconversion-8.2
 
 HEADERS = ttcr/Cell.h ttcr/Grad.h ttcr/Grid2D.h ttcr/Grid2Drcfs.h ttcr/Grid2Drc.h ttcr/Grid2Drcsp.h ttcr/Grid2Drnfs.h \
 ttcr/Grid2Drn.h ttcr/Grid2Drnsp.h ttcr/Grid2Ducfm.h ttcr/Grid2Ducfs.h ttcr/Grid2Duc.h ttcr/Grid2Ducsp.h \
