updated example with vtk export

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ ttcrpy/cmesh2d.cp37-win_amd64.pyd
 ttcrpy/cmesh3d.cp36-win_amd64.pyd
 
 ttcrpy/cmesh3d.cp37-win_amd64.pyd
+
+examples/example_cmesh2d.vtu
