--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -15,6 +15,6 @@ include ttcr/structs_ttcr.h
 include ttcr/ttcr_t.h
 include ttcr/utils.h
 include boost_1_72_0/LICENSE_1_0.txt
-incliude boost_1_72_0/README.md
+include boost_1_72_0/README.md
 recursive-include boost_1_72_0/boost/math *
 recursive-include eigen-3.3.7 *
