--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,23 @@
+
 notifications:
   email: false
+
 matrix:
   include:
-  - sudo: required
+  - name: "manylinux1"
+    sudo: required
     services:
     - docker
     env: DOCKER_IMAGE=quay.io/pypa/manylinux1_x86_64 PLAT=manylinux1_x86_64
-  - sudo: required
+  - name: "manylinux2010"
+    sudo: required
     services:
     - docker
     env: DOCKER_IMAGE=quay.io/pypa/manylinux2010_x86_64 PLAT=manylinux2010_x86_64
+
 install:
 - docker pull $DOCKER_IMAGE
+
 script:
 - docker run --rm -e PLAT=$PLAT -v `pwd`:/io $DOCKER_IMAGE $PRE_CMD /io/travis/build-linux-wheels.sh
 - ls wheelhouse/
