--- a/.gitignore
+++ b/.gitignore
@@ -31,21 +31,7 @@ ttcrpy/rgrid.cpp
 
 ttcrpy/cmesh2d.cpp
 
-ttcrpy/cgrid2d.cp36-win_amd64.pyd
-
-ttcrpy/cgrid2d.cp37-win_amd64.pyd
-
-ttcrpy/cgrid3d.cp36-win_amd64.pyd
-
-ttcrpy/cgrid3d.cp37-win_amd64.pyd
-
-ttcrpy/cmesh2d.cp36-win_amd64.pyd
-
-ttcrpy/cmesh2d.cp37-win_amd64.pyd
-
-ttcrpy/cmesh3d.cp36-win_amd64.pyd
-
-ttcrpy/cmesh3d.cp37-win_amd64.pyd
+ttcrpy/*.pyd
 
 examples/example_cmesh2d.vtu
 
