--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,12 +45,12 @@ build_script:
 #       &$env:PYTHON\python setup.py nosetests --with-xunit
 #       if ($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode) }
 
-# after_test:
-#   # If tests are successful, create binary packages for the project.
-#   - "%CMD_IN_ENV% python setup.py bdist_wheel"
+after_build:
+  # If tests are successful, create binary packages for the project.
+  - "%PYTHON%\\python setup.py bdist_wheel"
 #   - "%CMD_IN_ENV% python setup.py bdist_wininst"
 #   - "%CMD_IN_ENV% python setup.py bdist_msi"
-#   - ps: "ls dist"
+  - ps: "ls dist"
 
 # artifacts:
 #   # Archive the generated packages in the ci.appveyor.com build report.
@@ -60,9 +60,9 @@ build_script:
 #  - TODO: upload the content of dist/*.whl to a public wheelhouse
 #
 
-on_finish:
-  # Upload test results to AppVeyor
-  - ps: |
-      # this uploads nosetests.xml produced in test_script step
-      $wc = New-Object 'System.Net.WebClient'
-      $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\nosetests.xml))
+# on_finish:
+#   # Upload test results to AppVeyor
+#   - ps: |
+#       # this uploads nosetests.xml produced in test_script step
+#       $wc = New-Object 'System.Net.WebClient'
+#       $wc.UploadFile("https://ci.appveyor.com/api/testresults/junit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\nosetests.xml))
