--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,6 +33,7 @@ install:
   # pip will build them from source using the MSVC compiler matching the
   # target Python version and architecture
   - "%PYTHON%\\Scripts\\pip install -r requirements.txt"
+  - "%PYTHON%\\Scripts\\pip install wheel"
 
 build_script:
   # Build the compiled extension
