--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,19 +1,31 @@
-image: Visual Studio 2019
+image:
+  - Visual Studio 2019
+  - macos
 
 environment:
   matrix:
 
-    - PYTHON: "C:\\Python36-x64"
-      PYTHON_VERSION: "3.6.x" # currently 3.6.5
-      PYTHON_ARCH: "64"
-
-    - PYTHON: "C:\\Python37-x64"
+    # - job_name: python 3.6 on windows
+    #   appveyor_build_worker_image: Visual Studio 2019
+    #   PYTHON: "C:\\Python36-x64"
+    #   PYTHON_VERSION: "3.6.x" # currently 3.6.5
+    #   PYTHON_ARCH: "64"
+    #
+    # - job_name: python 3.7 on windows
+    #   appveyor_build_worker_image: Visual Studio 2019
+    #   PYTHON: "C:\\Python37-x64"
+    #   PYTHON_VERSION: "3.8.x"
+    #   PYTHON_ARCH: "64"
+    #
+    - job_name: python 3.8 on windows
+      appveyor_build_worker_image: Visual Studio 2019
+      PYTHON: "C:\\Python38-x64"
       PYTHON_VERSION: "3.8.x"
       PYTHON_ARCH: "64"
 
-    - PYTHON: "C:\\Python38-x64"
-      PYTHON_VERSION: "3.8.x"
-      PYTHON_ARCH: "64"
+    - job_name: python 3.8 on macos
+      appveyor_build_worker_image: macos
+      sh: "source ~/venv3.8/bin/activate"
 
 branches:
   only:
@@ -22,22 +34,27 @@ branches:
 install:
 
   # Check that we have the expected version and architecture for Python
-  - "%PYTHON%\\python --version"
+  - cmd: "%PYTHON%\\python --version"
+  - sh: "python --version"
 
   # Upgrade to the latest version of pip to avoid it displaying warnings
   # about it being out of date.
-  - "%PYTHON%\\python -m pip install --upgrade pip"
+  - cmd: "%PYTHON%\\python -m pip install --upgrade pip"
+  - sh: "python -m pip install --upgrade pip"
 
   # Install the build dependencies of the project. If some dependencies contain
   # compiled extensions and are not provided as pre-built wheel packages,
   # pip will build them from source using the MSVC compiler matching the
   # target Python version and architecture
-  - "%PYTHON%\\Scripts\\pip install -r requirements.txt"
-  - "%PYTHON%\\Scripts\\pip install wheel"
+  - cmd: "%PYTHON%\\Scripts\\pip install -r requirements.txt"
+  - cmd: "%PYTHON%\\Scripts\\pip install wheel"
+  - sh: "pip install -r requirements.txt"
+  - sh: "pip install wheel"
 
 build_script:
   # Build the compiled extension
-  - "%PYTHON%\\python setup.py build"
+  - cmd: "%PYTHON%\\python setup.py build"
+  - sh: "python setup.py build"
 
 # test_script:
 #   # Run the project tests and store results in .xml log
@@ -46,12 +63,12 @@ build_script:
 #       &$env:PYTHON\python setup.py nosetests --with-xunit
 #       if ($LastExitCode -ne 0) { $host.SetShouldExit($LastExitCode) }
 
-after_build:
-  # If tests are successful, create binary packages for the project.
-  - "%PYTHON%\\python setup.py bdist_wheel"
-#   - "%CMD_IN_ENV% python setup.py bdist_wininst"
-#   - "%CMD_IN_ENV% python setup.py bdist_msi"
-  - ps: "ls dist"
+# after_build:
+#   # If tests are successful, create binary packages for the project.
+#   - cmd: "%PYTHON%\\python setup.py bdist_wheel"
+# #   - "%CMD_IN_ENV% python setup.py bdist_wininst"
+# #   - "%CMD_IN_ENV% python setup.py bdist_msi"
+#   - ps: "ls dist"
 
 # artifacts:
 #   # Archive the generated packages in the ci.appveyor.com build report.
