--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ environment:
     - APPVEYOR_BUILD_WORKER_IMAGE: macos
       APPVEYOR_JOB_NAME: "python38-x64-macos"
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-      APPVEYOR_JOB_NAME: "python38-x64-vs2019
+      APPVEYOR_JOB_NAME: "python38-x64-vs2019"
       PYTHON_ARCH: "64"
 
 stack: python 3.8
