--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,8 @@
 environment:
+  global:
+    CIBW_BUILD: cp38-*
+    CIBW_SKIP: "*-win32 *-manylinux_i686"
+
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: macos
       APPVEYOR_JOB_NAME: "python38-x64-macos"
@@ -9,14 +13,14 @@ environment:
 stack: python 3.8
 
 init:
-  - cmd: set PATH=C:\Python37;C:\Python37\Scripts;%PATH%
+  - cmd: set PATH=C:\Python38;C:\Python38\Scripts;%PATH%
 
 install:
-  - python3 -m pip install --upgrade pip
-  - python3 -m pip install cibuildwheel==1.6.0
-  - python3 -m pip install -r requirements.txt
+  - python -m pip install --upgrade pip
+  - python -m pip install cibuildwheel==1.6.0
+  - python -m pip install -r requirements.txt
 
-build_script: python3 -m cibuildwheel --output-dir wheelhouse
+build_script: python -m cibuildwheel --output-dir wheelhouse
 
 artifacts:
   - path: "wheelhouse\\*.whl"
