--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,7 @@ environment:
   global:
     CIBW_BUILD: cp38-*
     CIBW_SKIP: "*-win32 *-manylinux_i686"
+    CIBW_BEFORE_BUILD: "python -m pip install -r requirements.txt"
 
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: macos
@@ -9,8 +10,6 @@ environment:
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
       APPVEYOR_JOB_NAME: "python38-x64-vs2019"
       PYTHON_ARCH: "64"
-
-stack: python 3.8
 
 init:
   - cmd: set PATH=C:\Python38;C:\Python38\Scripts;%PATH%
