--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,20 +7,16 @@ environment:
   matrix:
     - APPVEYOR_BUILD_WORKER_IMAGE: macos
       APPVEYOR_JOB_NAME: "python38-x64-macos"
-    - APPVEYOR_BUILD_WORKER_IMAGE: macos
-      APPVEYOR_JOB_NAME: "python37-x64-macos"
     - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
       APPVEYOR_JOB_NAME: "python38-x64-vs2019"
       PYTHON: "C:\\Python38-x64"
       PYTHON_ARCH: "64"
-    - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
-      APPVEYOR_JOB_NAME: "python37-x64-vs2019"
-      PYTHON: "C:\\Python37-x64"
-      PYTHON_ARCH: "64"
+    # - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    #   APPVEYOR_JOB_NAME: "python37-x64-vs2019"
+    #   PYTHON: "C:\\Python37-x64"
+    #   PYTHON_ARCH: "64"
 
-stack:
-  - python 3.7
-  - python 3.8
+stack: python 3.8
 
 init:
   - cmd: set PATH=%PYTHON%;%PYTHON%\Scripts;%PATH%
