--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 environment:
   global:
-    CIBW_BUILD: cp3?-*
+    CIBW_BUILD: cp3[678]-*
     CIBW_SKIP: "*-win32 *-manylinux_i686"
     CIBW_BEFORE_BUILD: "python -m pip install --upgrade pip && python -m pip install -r requirements.txt"
 
