--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,13 +23,12 @@ install:
 
 build_script:
   - python -m cibuildwheel --output-dir wheelhouse
-  - >
-    IF "%APPVEYOR_REPO_TAG%" == "true"
-    (
-    python -m pip install twine
-    &&
-    python -m twine upload wheelhouse/*.whl
-    )
+  - ps: >-
+      if ($env:APPVEYOR_REPO_TAG -eq "true") {
+        python -m pip install twine
+        &&
+        python -m twine upload wheelhouse/*.whl
+      }
 
 artifacts:
   - path: "wheelhouse\\*.whl"
