--- a/.github/workflows/build_manylinux.yml
+++ b/.github/workflows/build_manylinux.yml
@@ -36,9 +36,9 @@ jobs:
           pip install twine
 
       - name: Build manylinux Python wheels
-        uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux2010_x86_64
+        uses: RalfG/python-wheels-manylinux-build@v0.3.4-manylinux2014_x86_64
         with:
-          python-versions: 'cp37-cp37m cp38-cp38'
+          python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39'
           build-requirements: 'setuptools cython numpy scipy vtk'
           
       - name: Publish package
