--- a/.github/workflows/build_manylinux.yml
+++ b/.github/workflows/build_manylinux.yml
@@ -2,7 +2,7 @@
 
 name: ttcrpy package build and publish for linux
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the master branch
   push:
@@ -40,9 +40,9 @@ jobs:
         with:
           python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39'
           build-requirements: 'setuptools cython numpy scipy vtk'
-          
+
       - name: Publish package
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+        if: github.event_name == 'tag' && startsWith( github.ref, 'v')
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
