--- a/.github/workflows/build_manylinux.yml
+++ b/.github/workflows/build_manylinux.yml
@@ -49,7 +49,7 @@ jobs:
           echo "github.ref = ${{ github.ref }}"
 
       - name: Publish package
-        if: github.event_name == 'push' && startsWith( github.ref, 'v')
+        if: github.event_name == 'push' && startsWith( github.ref, 'refs/tags/v')
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           user: __token__
