--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -53,23 +53,14 @@ jobs:
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
-    - name: Autobuild python
-      uses: github/codeql-action/autobuild@v1
-      with:
-        language: python
+    # - if: matrix.language == 'python'
+    #   name: Autobuild python
+    #   uses: github/codeql-action/autobuild@v1
 
-    # ℹ️ Command-line programs to run using the OS shell.
-    # 📚 https://git.io/JvXDl
-
-    # ✏️ If the Autobuild fails above, remove it and uncomment the following three lines
-    #    and modify them (or add more) to build your code if your project
-    #    uses a compiled language
-
-    - name: build c++
+    - if: matrix.language == 'cpp'
+      name: buils c++
       run: |
         make -f Makefile.noVTK
-      with:
-        language: cpp
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
