--- a/.github/workflows/build_manylinux.yml
+++ b/.github/workflows/build_manylinux.yml
@@ -43,10 +43,10 @@ jobs:
           python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39'
           build-requirements: 'setuptools cython numpy scipy vtk'
 
-      - name: Print variables
+      - name: Remove uneeded wheel files
         run: |
-          echo "github.event_name = ${{ github.event_name }}"
-          echo "github.ref = ${{ github.ref }}"
+          rm dist/*linux_x86_64.whl
+          ls -l dist/
 
       - name: Publish package
         if: github.event_name == 'push' && startsWith( github.ref, 'refs/tags/v')
