--- a/.github/workflows/build_manylinux.yml
+++ b/.github/workflows/build_manylinux.yml
@@ -43,14 +43,10 @@ jobs:
           python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39'
           build-requirements: 'setuptools cython numpy scipy vtk'
 
-      - name: Remove uneeded wheel files
-        run: |
-          rm dist/*linux_x86_64.whl
-          ls -l dist/
-
       - name: Publish package
         if: github.event_name == 'push' && startsWith( github.ref, 'refs/tags/v')
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+        run: |
+          twine upload dist/*-manylinux*.whl
