--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,8 @@
 include ttcrpy/*.pyx
-include ttcrpy/*.pyd
-include ttcrpy/*ttcr.h
+include ttcrpy/*.pxd
+include ttcrpy/*.h
+include ttcrpy/verbose.cpp
+include ttcrpy/__init__.py
 include ttcr/Cell.h
 include ttcr/Grad.h
 include ttcr/Grid*.h
@@ -14,7 +16,5 @@ include ttcr/structs_ttcr.h
 include ttcr/ttcr_t.h
 include ttcr/utils.h
 include ttcr/ctpl_stl.h
-include boost_1_81_0/LICENSE_1_0.txt
-include boost_1_81_0/README.md
-recursive-include boost_1_81_0/boost/math *
-recursive-include eigen-3.4.0 *
+graft boost_1_81_0
+graft eigen-3.4.0
