--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -33,61 +33,58 @@ jobs:
           # Window 64 bit
           # Note: windows-2019 is needed for older Python versions:
           # https://github.com/scikit-learn/scikit-learn/issues/22530
-          - os: windows-2019
-            python: 38
+          # - os: windows-2019
+          #   python-version: "3.8"
+          #   platform_id: win_amd64
+          - os: windows-latest
+            python-version: "3.9"
             platform_id: win_amd64
           - os: windows-latest
-            python: 39
+            python-version: "3.10"
             platform_id: win_amd64
-          - os: windows-latest
-            python: 310
-            platform_id: win_amd64
-          - os: windows-latest
-            python: 311
-            platform_id: win_amd64
+          # - os: windows-latest
+          #   python-version: "3.11"
+          #   platform_id: win_amd64
 
           # Linux 64 bit manylinux2014
+          # - os: ubuntu-latest
+          #   python-version: "3.8"
+          #   platform_id: manylinux_x86_64
+          #   manylinux_image: manylinux2014
           - os: ubuntu-latest
-            python: 38
+            python-version: "3.9"
             platform_id: manylinux_x86_64
             manylinux_image: manylinux2014
           - os: ubuntu-latest
-            python: 39
+            python-version: "3.10"
             platform_id: manylinux_x86_64
             manylinux_image: manylinux2014
-          - os: ubuntu-latest
-            python: 310
-            platform_id: manylinux_x86_64
-            manylinux_image: manylinux2014
-          - os: ubuntu-latest
-            python: 311
-            platform_id: manylinux_x86_64
-            manylinux_image: manylinux2014
+          # - os: ubuntu-latest
+          #   python-version: "3.11"
+          #   platform_id: manylinux_x86_64
+          #   manylinux_image: manylinux2014
 
           # MacOS x86_64
           - os: macos-latest
-            python: 38
+            python-version: "3.9"
             platform_id: macosx_x86_64
           - os: macos-latest
-            python: 39
+            python-version: "3.10"
             platform_id: macosx_x86_64
-          - os: macos-latest
-            python: 310
-            platform_id: macosx_x86_64
-          - os: macos-latest
-            python: 311
-            platform_id: macosx_x86_64
+          # - os: macos-latest
+          #   python-version: "3.11"
+          #   platform_id: macosx_x86_64
 
           # MacOS apple silicon
           - os: macos-latest
-            python: 39
+            python-version: "3.9"
             platform_id: macosx_arm64
           - os: macos-latest
-            python: 310
+            python-version: "3.10"
             platform_id: macosx_arm64
-          - os: macos-latest
-            python: 311
-            platform_id: macosx_arm64
+          # - os: macos-latest
+          #   python-version: "3.11"
+          #   platform_id: macosx_arm64
 
     steps:
       - name: Checkout ttcrpy
@@ -96,7 +93,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.9'  # update once build dependencies are available
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
