--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -21,7 +21,8 @@ sphinx:
 
 # If using Sphinx, optionally build your docs in additional formats such as PDF
 formats:
-   - pdf, epub
+   - pdf
+   - epub
 
 # Optionally declare the Python requirements required to build your docs
 python:
