--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -27,4 +27,4 @@ formats:
 # Optionally declare the Python requirements required to build your docs
 python:
    install:
-   - requirements:  ttcrpy
+   - requirements: docs/requirements.txt
