--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -27,4 +27,5 @@ formats:
 # Optionally declare the Python requirements required to build your docs
 python:
    install:
+   - requirements: requirements.txt
    - requirements: docs/requirements.txt
