--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -36,7 +36,7 @@ jobs:
           # - os: windows-2019
           #   python-version: "3.8"
           #   platform_id: win_amd64
-          # - os: windows-latest
+          - os: windows-latest
             python-version: "3.9"
             platform_id: win_amd64
           - os: windows-latest
