--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -103,8 +103,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install twine
 
-      - name: Build manylinux Python wheels
+      - name: Build Python wheels
         uses: pypa/cibuildwheel@v2.12.0
+        with:
+          python-version: ${{ matrix.python-version }}
  
       - uses: actions/upload-artifact@v3
         with:
