--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,9 @@ write_to = "src/ttcrpy/_version.py"
 # Skip 32-bit builds
 skip = ["*-win32", "*-manylinux_i686"]
 
+# Disable building PyPy wheels on all platforms
+skip = "pp*"
+
 # Build `universal2` and `arm64` wheels on an Intel runner.
 # Note that the `arm64` wheel and the `arm64` part of the `universal2`
 # wheel cannot be tested in this configuration.
