--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,10 +40,10 @@ write_to = "src/ttcrpy/_version.py"
 
 [tool.cibuildwheel]
 # Skip 32-bit builds & building PyPy wheels on all platforms
-skip = ["*-win32", "*-manylinux_i686", "pp*"]
+skip = ["*-win32", "*-manylinux_i686", "pp*", "*-musllinux*", ]
 
 # Build `universal2` and `arm64` wheels on an Intel runner.
 # Note that the `arm64` wheel and the `arm64` part of the `universal2`
 # wheel cannot be tested in this configuration.
 [tool.cibuildwheel.macos]
-archs = ["x86_64", "universal2", "arm64"]
+archs = ["x86_64", "arm64"]
