--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools", "setuptools-scm", "cython", "numpy", "scipy", "vtk"]
+requires = ["setuptools", "setuptools-scm[toml]", "cython", "numpy", "scipy", "vtk"]
 build-backend = "setuptools.build_meta"
 
 [project]
