--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -43,9 +43,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install twine
 
-      - name: Build Python wheels
-        uses: pypa/cibuildwheel@v2.12.0
- 
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.16.2
+
+      - name: Build wheels
+        run: python -m cibuildwheel --output-dir wheelhouse
+
       - uses: actions/upload-artifact@v3
         with:
           path: ./wheelhouse/*.whl
